@@ -3,10 +3,8 @@ package com.example.backend.dto;
 import lombok.Builder;
 import lombok.Data;
 import java.util.List;
-import java.util.stream.Collectors;
 //code moi
 import java.util.Collections;
-import lombok.NoArgsConstructor;
 
 import com.example.backend.entities.Shop;
 
@@ -21,7 +19,7 @@ public class ShopDTO {
 
     // code moi
     public static ShopDTO fromEntity(Shop shop) {
-        if(shop == null){
+        if (shop == null) {
             return null;
         }
 
@@ -30,11 +28,11 @@ public class ShopDTO {
                 .name(shop.getName())
                 .address(shop.getAddress())
                 .users(shop.getUsers() != null
-                ? shop.getUsers().stream().map(UserDTO::fromEntity).collect(Collectors.toList()) 
-                : Collections.emptyList())  // Tránh lỗi null
-        .createdBy(shop.getCreateBy() != null 
-                ? UserDTO.fromEntity(shop.getCreateBy()) 
-                : null)  // Tránh lỗi null
+                        ? shop.getUsers().stream().map(UserDTO::fromEntity).toList()
+                        : Collections.emptyList()) // Tránh lỗi null
+                .createdBy(shop.getCreateBy() != null
+                        ? UserDTO.fromEntity(shop.getCreateBy())
+                        : null) // Tránh lỗi null
                 .build();
     }
 }
